# portfolio

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.staging  LICENSE  README.md  REDESIGN_PLAN.md  build-wasm.sh  docker-compose.yml  dockerfile  log4rs.yaml  report.html
.github/workflows/: staging-deploy.yml
backend/: Cargo.toml
backend/src/: game_of_life.rs  lib.rs  logging.rs  main.rs  middleware.rs  routes.rs
backend/tests/: api.rs
frontend/: README.md  astro.config.mjs  package-lock.json  package.json
frontend/docs/: content-guide.md  design-system.md
frontend/public/: robots.txt
frontend/public/legacy/: game_of_life.html  homelab.html
frontend/public/legacy/css/: main.css.map
frontend/public/wasm/: wasm_game_of_life.d.ts  wasm_game_of_life.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
frontend/src/: site.config.ts
frontend/src/components/: README.md
frontend/src/components/callouts/: Badge.astro  CallToAction.astro  Callout.astro
frontend/src/components/cards/: ProjectCard.astro
frontend/src/components/layout/: ContentGrid.astro  SectionShell.astro
frontend/src/components/layouts/: GridSection.astro  SplitSection.astro
frontend/src/components/navigation/: PrimaryNav.astro  StickyNav.astro
frontend/src/components/patterns/: Accordion.astro  AccordionGroup.astro  CodeBlock.astro  CommandCard.astro  FeatureGrid.astro  MediaFrame.astro
frontend/src/components/projects/: GameOfLifeDemo.astro  README.md  (+10 more)
frontend/src/content/: README.md  config.ts
frontend/src/layouts/: BaseLayout.astro  ProjectLayout.astro
frontend/src/pages/: about.astro  index.astro
frontend/src/scripts/: game_of_life.js
frontend/src/styles/: globals.css  tokens.css
frontend/src/utils/: README.md  logger.ts
src/: main.rs
static/: ReID.html  about.html  background.html  game_of_life.html  homelab.html  index.html  projects.html  test.html
static/css/: main.css  main.css.map
static/javascript/: game_of_life.js  scrollveal.js
static/style/: main.scss
static/style/base/: _base.scss  _mixins.scss  _typography.scss  _variables.scss
static/style/components/: _buttons.scss
static/style/layout/: _footer.scss  _sections.scss
static/style/sections/: _about.scss  _contact.scss  _gol.scss  _homelab.scss  _implementation.scss  _intro.scss  _projects.scss  _proof.scss
static/styles/: styles.css
wasm_game_of_life/: Cargo.toml
wasm_game_of_life/.cargo/: config.toml
wasm_game_of_life/src/: lib.rs
(+24 files in other folders)
