[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "portfolio" 
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
log = "0.4"
log4rs = "1.2"

[dev-dependencies]
hyper = "0.14"
tower = "0.4"
serde_json = "1.0"
