[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "portfolio" 
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.43.1", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
log = "0.4"
log4rs = { version = "1.2", features = ["json_encoder"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

[dev-dependencies]
hyper = "1.6"
serde_json = "1.0"
