[package]
name = "wasm_game_of_life"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rayon = "1.10"
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1"

# Local dependencies
game_of_life = { path = "../../game_of_life" }
text_to_input = { path = "../../text_to_input" }


